refactor: replace `get(0)` and `get()` calls with `getFirst()` for consistency and readability; remove redundant mock setups, unused code, and imports; simplify test setups and assertions